<resources>
    <string name="app_name">Run4YourLife</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="personal_data">Personal Data</string>
    <string name="birth_header">Birth Data</string>

    <!-- Personal Data Preferences -->
    <string name="personal_name">Name</string>
    <string name="sex_selector">Sex</string>
    <string name="bodyweight">Body Weight</string>

    <!-- Birth Data Preferences -->
    <string name="birth_year">Year</string>
    <string name="birth_month">Month</string>
    <string name="birth_day">Day</string>
    <string name="weather_image">weather image</string>
    <string name="air_quality_placeholder">Air Quality: —</string>
    <string name="uv_index_placeholder">UV index: —</string>
    <string name="loading">loading</string>
    <string name="best_time_to_run">Best time to Run:</string>
    <string name="profilepicture_desc">ProfilePicture</string>
    <string name="food_image_desc">food image</string>
    <string name="timer_placeholder">00:00</string>
    <string name="distance_placeholder">0.0 km</string>
    <string name="speed_chart">Speed Chart</string>
    <string name="altitude">Altitude</string>
    <string name="open_extras_desc">open extras</string>
    <string name="start_button_desc">start button</string>
    <string name="kov_meg">Következő megálló:</string>
</resources>